# mr_loc_eco

./: .env  docker-compose.yml
backend/: .env  main.py  pyproject.toml
backend/config/: database.py  get_env.py
backend/model/: base.py  cart.py  category.py  image.py  order.py  product.py  purchase.py  user.py
backend/router/: api.py  cart.py  category.py  image.py  order.py  product.py  user.py
backend/schema/: base.py  cart.py  category.py  home.py  image.py  order.py  product.py  purchase.py  user.py
backend/sql/: create_table.sql
frontend/: package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.ts
frontend/src/components/: index.js
frontend/src/components/Carousel/: index.vue
frontend/src/components/Categories/: index.vue  mobile.vue
frontend/src/components/Comment/: index.vue
frontend/src/components/ConfirmDelete/: index.vue
frontend/src/components/ConfirmDialog/: index.vue
frontend/src/components/Dialog/: index.js
frontend/src/components/DialogContainer/: index.vue
frontend/src/components/FastInputQuantity/: index.vue
frontend/src/components/FooterBar/: index.vue
frontend/src/components/HeaderBar/: index.vue
frontend/src/components/ImageList/: index.vue
frontend/src/components/ProductDetail/: index.vue
frontend/src/components/SubProduct/: index.vue
frontend/src/pages/Admin/: index.js  index.vue  product.vue
frontend/src/plugins/: api.js  index.js
frontend/src/router/: index.ts
frontend/src/store/: categories.js  index.ts
frontend/src/utils/: common.js  urlPath.js
(+14 files in other folders)
