[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Bangtx <bangtran.hha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"
peewee = "^3.15.4"
psycopg2-binary = "^2.9.5"
python-multipart = "^0.0.5"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
